--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -38,6 +38,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  height: 100%;
   min-width: 4.375rem;
   background-color: #431e44;
   height: 70%;
