--- a/src/components/subHeaders/HeaderSearch.css
+++ b/src/components/subHeaders/HeaderSearch.css
@@ -12,6 +12,10 @@
   z-index: 1;
 }
 
+.headerSearchDark {
+  border: 1px solid #656465 !important;
+}
+
 .headerSearch_open_container {
   display: flex;
   flex-direction: column;
@@ -19,7 +23,7 @@
 
 .headerSearch_header {
   display: flex;
-  border-bottom: 1px solid #d5d5d5;
+  border-bottom: 1px solid #656465;
 }
 
 .headerSearch_header input {
@@ -67,12 +71,12 @@
   flex-direction: row;
 }
 
-.headerSearch_bodyLower div a {
+.headerSearch_bodyLower div .headerSearchLight {
   text-decoration: none;
   color: black;
 }
 
-.headerSearch_bodyLower div a:hover {
+.headerSearch_bodyLower div .headerSearchLight:hover {
   text-decoration: underline;
   color: rgb(76, 76, 211);
 }
@@ -81,18 +85,47 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background-color: #f8f8f8;
+  /* background-color: #f8f8f8; */
   border-radius: 0px 0px 9px 9px;
   height: 12%;
   padding: 0rem 1rem;
 }
 
+.headerSearch_footerDark {
+  background-color: #111 !important;
+  border: 1px solid gray;
+}
+
 .headerSearch_footer a {
   text-decoration: none;
   color: black;
+  border: none !important;
 }
 
 .headerSearch_footer a:hover {
   text-decoration: underline;
   color: rgb(76, 76, 211);
+}
+
+.headerSearchDark {
+  background-color: #111;
+  color: white;
+  border: none;
+}
+
+.headerSearchDark::-webkit-scrollbar {
+  width: 10px;
+}
+/* Track */
+.headerSearchDark::-webkit-scrollbar-track {
+  background: rgb(70, 70, 70);
+}
+/* Handle */
+.headerSearchDark::-webkit-scrollbar-thumb {
+  background: rgb(26, 26, 26);
+  border-left: 1px solid #4b204c;
+}
+/* Handle on hover */
+.headerSearchDark::-webkit-scrollbar-thumb:hover {
+  background: #111;
 }
