--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,17 @@
   width: 100%;
   height: 100vh;
 }
-/* 
+
 @media only screen and (max-width: 52.85rem) {
   .header_siderBar {
     min-width: 4rem;
   }
   .header_profile {
     min-width: 4rem;
+  }
+
+  .sideBar {
+    display: none;
   }
 
   .ChatIconSection {
@@ -22,4 +26,4 @@
   .edDfcb {
     position: absolute;
   }
-} */
+}
