--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,6 +11,30 @@
   border-bottom: 1px solid rgb(72, 72, 72);
 }
 
+.header_leftSide {
+  display: flex;
+  width: 70%;
+  align-items: center;
+}
+
+.header_rightSide {
+  display: flex;
+  align-items: center;
+  width: 30%;
+  justify-content: flex-end;
+  padding-right: 0.5rem;
+}
+
+.header_rightSide button {
+  height: 1.5rem;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+.header_rightSide button img {
+  height: 1.5rem;
+}
+
 .header_siderBar {
   display: flex;
   align-items: center;
@@ -21,7 +45,7 @@
 }
 
 .header_iconButton {
-  padding: 5px !important;
+  padding: 5px;
   z-index: 0;
 }
 
@@ -29,6 +53,7 @@
   position: relative;
   align-items: center;
   flex: 2;
+  height: 2rem;
   min-width: 0;
   max-width: 500px;
   display: flex;
@@ -101,4 +126,75 @@
 .header_profile button img {
   height: 100%;
   border-radius: 4px;
+}
+
+.hide-for-desktop {
+  display: none;
+}
+
+@media only screen and (max-width: 320px) {
+  .header_search_container {
+    width: 50% !important;
+  }
+}
+
+@media only screen and (max-width: 52.85rem) {
+  .header_siderBar {
+    min-width: 0;
+  }
+  .header_search_container {
+    flex: none !important;
+    width: 65%;
+    height: 2.25rem;
+    min-width: none !important;
+  }
+  .header_markQuestion {
+    display: none;
+  }
+  .header_profile button {
+    width: auto !important;
+  }
+  .react-switch-label .react-switch-button {
+    height: 20.5px !important;
+  }
+  .header_siderBar {
+    flex: none !important;
+  }
+
+  .headerHistory {
+    left: 5% !important;
+  }
+  .headerHelp {
+    left: auto !important;
+  }
+
+  .headerProfile {
+    left: 20% !important;
+  }
+  .header_profile {
+    /* width: 100%; */
+    min-width: 0px !important;
+    flex: none !important;
+  }
+  .open span:first-child {
+    transform: rotate(45deg);
+  }
+  .open span:nth-child(2) {
+    opacity: 0;
+  }
+  .open span:last-child {
+    transform: rotate(-45deg);
+  }
+  .header__toggle span {
+    display: block;
+    width: 26px;
+    height: 2px;
+    background-color: white;
+    transition: all 300ms ease-in-out;
+    transform-origin: 3px 1px;
+  }
+
+  .header__toggle span:not(:last-child) {
+    margin-bottom: 5px;
+  }
 }
